--- a/ChangeLog
+++ b/ChangeLog
@@ -2,3 +2,6 @@ v0.44.0
 	- xlogin can work like a static session manager. Start and stop desktop componentes as requested in configs files.
 	- Code refactoring and cleanup
 	- BUG correction
+v0.44.1
+	- security enhancements
+	- now syslog is opcional feature and could log to file. Patching src/defconfig.h could change logfile
